--- a/sys/kern/capabilities.conf
+++ b/sys/kern/capabilities.conf
@@ -95,6 +95,7 @@ aio_return
 aio_suspend
 aio_waitcomplete
 aio_write
+aio_writev
 
 ##
 ## audit(2) is a global operation, submitting to the global trail, but it is
