--- a/sys/kern/capabilities.conf
+++ b/sys/kern/capabilities.conf
@@ -96,6 +96,7 @@ aio_suspend
 aio_waitcomplete
 aio_write
 aio_writev
+aio_readv
 
 ##
 ## audit(2) is a global operation, submitting to the global trail, but it is
